second round of cuts complete, now putting things back together

--- a/chap2.tex
+++ b/chap2.tex
@@ -1,4 +1,4 @@
-\chapter{The Stakes of Our Stories}
+\chapter{Science Fictions, Designed Dreams}
 \label{chap:2}
 
 %% 3. Stakes of stories/tech (swap 4?)
@@ -57,8 +57,6 @@ science fiction,'' as Julian Bleecker puts it, and represents a hybrid
 practice that attempts to negotiate between facts and wild, playful
 imaginings to bring light to the multiplicity of possible
 futures \cite[p. 8]{bleecker}. 
-
-\section{Science Fictions, Designed Dreams}
 
 %% related to the technologies they are responsible for
 %% helping bring to life on screen. 
@@ -174,6 +172,8 @@ in the real world.
 %% it about time?'' This hype-mindset fits the business
 %% goals of many news outlets interested primarily in page-views.
 
+\section{The Stakes of Our Stories}
+
 Driverless cars
 are in part works of theater, objects of technological spectacle which
 are not yet truly real, despite their existence as physical objects
@@ -284,7 +284,7 @@ to its logical conclusion and interrogate the social,
 cultural, and informational stakes implicit in it. 
 
 
-\section{Data Gathering and Monitoring} 
+\subsection{Data Gathering and Monitoring} 
 
 %% Costeja
 %% opens the floodgates---from previously limited, targeted removals
@@ -539,7 +539,7 @@ histories, family and trust networks.
 %%More on the problems of data ideology? or not the place for it?
 
 
-\section{Maps and Geography}
+\subsection{Maps and Geography}
 
 %% This is, at its
 %% core, a highly complex problem of interpretation and representation
@@ -680,7 +680,7 @@ enter everyday life.
 
 
 
-\section{Seeing and Sensing}
+\subsection{Seeing and Sensing}
 %% 2.2) machine vision
 %% --pull from the Spectator paper (4 p)
 %% INCL. machine learning
@@ -979,7 +979,7 @@ has been sensed, revealed, and affirmed by the image.
 %% a normal car! (1 p)
 %% -and of course interviews with people (Ryan Chin; Walker Smith etc.
 %% where they matter to this type of vehicle)
-\section{Functionalism, Utilitarianism, Ethics} 
+\subsection{Functionalism, Utilitarianism, Ethics} 
 %% Whether
 %% or not their machinic perspective is to be lauded is a deep and
 %% philosophical question, but
@@ -1236,7 +1236,7 @@ laws---and enact an ethics impervious to scrutiny.\footnote{Digital
 %% --airlines as a place where we see the different dimensions of
 %% statistical safety vs. passenger's feelings of safety (3 p)
 %% ---drawing from PARC/CAST documents
-\section{Safety and Statistical Risk}
+\subsection{Safety and Statistical Risk}
 
 %%ALSO: consider the risk comments in Cox \& Murray, Mar2 notes;
 %%trying to decide how many 9s to have; and what counts as evidence?
@@ -1508,7 +1508,7 @@ matters (and indeed, would tend to fabricate those statistics out of
 mere predictions). 
 
 
-\section{Planning, Policy, Cities}
+\subsection{Planning, Policy, Cities}
 
 %%%CUt this down and integrate with the other content
 
