--- a/chap3.tex
+++ b/chap3.tex
@@ -1410,7 +1410,40 @@ what separates them from systems that should not be allowed to do so.
 %% , and
 %% keep this in mind as we continue to develop more complex automation systems.
 
-Additionally, supervisory control presents the possibility for a
+%% That this idea of
+%%   automated vehicles as a time-saving convenience feature persists
+%%   despite the potential for these vehicles to also eliminate
+%%   enjoyable, skilled, and rewarding parts of driving is an intriguing
+%%   contradiction. This idea also disregards 
+
+One of many contradictions at the heart of
+automated vehicle research is that these vehicles promise
+to provide to us a greater measure of creativity\footnote{They claim
+  to do so largely by allowing people to do something other than sit
+  in traffic: to read, to sleep, to eat, to work.} in the act of
+driving, to remove some of the ``menial'' and routine tasks of manual
+control in favor of strategic decision-making. But
+despite a focus on relieving tedium, these systems
+have not primarily been envisioned as providing people creative
+control. Instead, in the process of following 
+the dream of fully automated operation---where the human labor has been
+entirely removed from the shoulders of the person in the vehicle, and
+displaced to the invisible labors of mapping, programming, and
+monitoring---engineers are designing systems where the ``driver''
+seems present largely to ensure the operation of the
+machinery, burdened with new but perhaps even more menial tasks of
+machine tending.\footnote{See for example Tom Simonite, ``Lazy Humans
+Shaped Google's New Autonomous Car'' \cite{simonite}, which discusses
+the human role within Google's test vehicle,
+and the company's response. This is purely speculation, but due to
+the way the system operated previously, it is possible at least one Google
+employee fell asleep at the wheel, which was the catalyst for their
+concern and change in focus.} Troublingly, these visions ignore the
+skilled, rewarding parts of driving, and disregard the shift in the automated
+  vehicle from a family space to an extension of the working environment,
+  which threatens its own sort of potentially uncreative labor.
+
+Supervisory control presents the possibility for a
 renegotiation of car 
 culture and its troubled relationship with the automated vehicle. In
 my interviews and research work at conferences, I noted especially the
