--- a/intro.tex
+++ b/intro.tex
@@ -514,7 +514,7 @@ vehicles, both via their sensor setups and algorithmic approaches to
 navigation, can be interpreted as another step along the path to the
 modern self-driving car, as instantiated within Google's design approach. 
 
-\section{Automated Cars in 2015}
+\subsection{Automated Cars in 2015}
 
 Approaches today have a variety of forms. While Google is making
 headlines with its self-driving vehicle research, and is defining the
@@ -612,7 +612,7 @@ goal. Our assumptions about use have changed (with seemingly little
 investigation into why), but they continue to be the background of both
 optimistic and pessimistic viewpoints.
 
-\subsection{Short-term Promises}
+\section{Short-term Promises}
 
 %reduce and deduplicate
 
