first round of finessing complete up to 4

--- a/abstract.tex
+++ b/abstract.tex
@@ -22,7 +22,7 @@ Automated cars, popularly rendered as ``driverless'' or
 ``self-driving'' cars, are a major sector of technological
 development in artificial intelligence and present a variety of
 questions for design, policy, and the culture at large. This work addresses the
-dominant narratives around self-driving 
+dominant narratives and ideologies around self-driving 
 vehicles and their historical antecedents, examining both the media's representation
 of self-driving vehicles and 
 the sources of the idea, common both among the media and many
@@ -32,12 +32,11 @@ discussing and investigating.
 This popular story has important social stakes (including
 surveillance, responsibility, and access), embedded in the
 technologies and fields involved in visions of full
-automation (AI, mapping, algorithmic ethics), which bear investigating
+automation (machine vision, mapping, algorithmic ethics), which bear investigating
 for the possible futures of 
 automation that they present.
-However, other potential narratives for automation exist, and are
-represented by both historical examples from other regimes of
-automation, and
+However, other potential narratives for looking at automation exist,
+representing lenses from
 literature in the fields of human supervisory control and
 joint-cognitive systems design. These fields---compared with
 that of AI---provide a very
