--- a/cover.tex
+++ b/cover.tex
@@ -45,8 +45,8 @@
 % however the specifications can change.  We recommend that you verify the
 % layout of your title page with your thesis advisor and/or the MIT 
 % Libraries before printing your final copy.
-\title{Driverless Dreams: Narratives, Ideologies, and the Shape of the
-Automated Car}
+\title{Driverless Dreams: Technological Narratives and the Shape of
+  the Automated Car}
 %% Replacing or Augmenting the Human
 %% Chauffeurs or Cyborgs: Ideologies and the Shape of the Self-Driving Car
 %TODO change the title of my other piece if I go with this thesis
@@ -59,6 +59,7 @@ Automated Car}
 %Self-Driving Dreams: Narratives, Ideologies, and the Shape of the
 %Automated Car
 
+% Driverless Dreams: Narratives, Ideologies, and the Shape of the Automated Car
 % Asleep at the Wheel: Dangerous Fantasies of a Driverless Future
 
 
@@ -66,7 +67,7 @@ Automated Car}
 \author{Erik Lee Stayton}
 % If you wish to list your previous degrees on the cover page, use the 
 % previous degrees command:
-       \prevdegrees{Sc.B., Brown University (2007)}
+       \prevdegrees{Sc.B. Physics A.B. English, Brown University (2007)}
 % You can use the \\ command to list multiple previous degrees
 %       \prevdegrees{B.S., University of California (1978) \\
 %                    S.M., Massachusetts Institute of Technology (1981)}
@@ -91,8 +92,9 @@ Automated Car}
 
 % If there is more than one supervisor, use the \supervisor command
 % once for each.
-\supervisor{T. L. Taylor}{Associate Professor}
-\supervisor{David Mindell}{Professor}
+\supervisor{T. L. Taylor}{Associate Professor of Comparative Media Studies}
+\supervisor{David A. Mindell}{Professor of the History of Engineering and
+Manufacturing (STS) \\ Professor of Aeronautics and Astronautics}
 
 % This is the department committee chairman, not the thesis committee
 % chairman.  You should replace this with your Department's Committee
