--- a/intro.tex
+++ b/intro.tex
@@ -37,36 +37,34 @@ the specifics of their use here. Autonomous, driverless, and self-driving
 vehicles are generally one and the same, though the terms
 ``driverless'' and
 ``self-driving'' are used particularly in the press when talking about
-these systems. Both ideas presuppose largely self-contained operation
+these systems. These all presuppose largely self-contained operation
 on the part of the automated system. An ``automated'' vehicle however
 does not necessarily presuppose self-contained operation, and cars
 have become increasingly automated over the past 50 years (through
 ABS, traction control, cruise control, automatic transmissions, etc.) without, so
 far at least, becoming autonomous. This point, simple though it
-sounds, is at the center of this thesis and is specifically the focus
-of chapter \ref{chap:3}. I use \emph{automated} to refer to any amount
+sounds, is at the center of this thesis. I use \emph{automated} to refer to any amount
 or kind of automation, and the other terms interchangeably when
-implying more complete automation.}---vehicles are being
+implying more complete automation, or conventional ideas thereof.}---vehicles are being
 envisioned, designed, and talked about. Instead, automated vehicle
 development has sustained several successive, overlapping paradigms,
 in part, though not completely, driven by the technical capabilities
 of and excitement about contemporary technologies. However, equally
-important in this story are the ideologies of control, of human and
-machine interaction, that shape engineering practice and vehicle
+important in this story are the ideologies of control and
+human-machine interaction that shape engineering practice and vehicle 
 development, and alter how developments are represented and discussed
 in popular media. What we believe self-driving cars to be---or what we
 believe they soon will be---is a product of the popular, teleological understanding
 of technology development, which draws from existing technocratic
-impulses and narratives.\footnote{These narratives are deeply, though
+narratives.\footnote{These narratives are deeply, though 
   not exclusively, American, and are intertwined with stories of
   American technological progress over the last century, from the
   Manhattan Project to the Apollo Program to ARPAnet to IBM's
-  Watson.} However, alternative narratives exist, and 
-are very influential among certain groups of automation researchers,
-but deserve much broader recognition outside of these circles. In
+  Watson.} Alternative paradigms exist,
+but deserve much broader recognition outside of certain engineering circles. In
 order to understand the way that automated vehicles have been figured
 popularly, the implications of that vision, and the alternatives to
-it, we should start by understanding the varied types and dimensions
+it, we should start by examining the varied types and dimensions
 of historical automotive automation research.
 
 %% It is
@@ -119,11 +117,10 @@ wheel, toot its horn, and it may even `sass' the policeman at the
 corner'' \cite{phantomAuto}. Described as ``one of the most amazing products of
 modern science,'' the 
 car proceeds ``as though there were an invisible driver at the wheel''
-in an effect both ``uncanny and mystifying''\cite{phantomAuto2}. Such work,
+in an effect both ``uncanny and mystifying'' \cite{phantomAuto2}. Such work,
 though it seems relatively primitive in retrospect (hardly more than a
-glorified RC-car, though it was a compelling demonstration of the
-power of radio control to remove the driver from a full-size vehicle), may well have
-helped capture the popular imagination. This basic idea would reemerge
+glorified RC-car, though it removed the driver from a full-size vehicle), may well have
+helped capture the popular imagination. This compelling idea would reemerge
 a few years later.
 
 %% , one which included trains and aircraft, a farm, and an
@@ -155,7 +152,7 @@ great success of the fair was
 GM's Futurama exhibit\footnote{The line for the exhibit routinely stretched to
 two miles in length, and 28,000 people visited the exhibit each day.}
 which presented an idea of what the world would look
-like in 1960 \cite[p. 3-4]{wetmore}. Automobiles were still the focal
+like in 1960 \cite[p. 3-4]{wetmore}. Automobiles were the focal
 point: the bird's-eye view presented a 
 future city with multi-lane elevated expressways filled with largely
 automated vehicles. While the cars' lateral position was maintained via
@@ -175,7 +172,7 @@ vehicles, with attendant infrastructural costs), such a system was
 reasonably coherent as a vision of what 1960 might be, from the
 perspective of attendees. This aspirational future was clean,
 modernist, and efficient; the rationalization of the
-factory\footnote{A topic of public interest demonstrated through
+factory\footnote{Public interest in this topic was demonstrated through
   popular factory tours of major Detroit automotive 
   plants, and 
 working GM and Ford assembly lines at the earlier Century of Progress
@@ -191,7 +188,7 @@ Radio was not the only revolutionary medium to be included in
    Mechanix} \cite{modernmechanix} betrays a 
  different vision of the autonomous vehicle: the so-called ``electric
  eye automobile'' which would steer itself via a control loop, using an
- array of ``electric eyes,'' or photocells, on the car to track a light
+ array of photocells on the car to track a light
  beam projected from the car and reflected by mirrors in the road
  surface.\footnote{Intriguingly, this simple application has become
    one of the classic robotics teaching experiments. I remember
@@ -267,8 +264,8 @@ demarcated space.
 %% dashboard and instrument cluster,
 
 One particularly salient public image from the 1950s comes from the
-\emph{Saturday Evening Post}, which ran an advertisement for ``America's
-Electric Light and Power Companies'' that depicted self-driving cars
+\emph{Saturday Evening Post}, which ran an advertisement for America's
+Electric Light and Power Companies that depicted self-driving cars
 coasting through an idyllic landscape, guided by electricity
 \cite{weber}. The roadways 
 are clean and clear, stretching off confidently into the distance. The
@@ -303,10 +300,10 @@ present into an equally conservative future.
 %% But unlike the 
 %% light-guided vehicle from the 1930s, this car had a new guidance
 %% mechanism, which is entirely 
-New wartime and postwar developments in electronics, the same ones that
+Wartime and postwar developments in electronics, the same ones that
 inspired new science fiction visions of the future, drove
 research in automated vehicle systems sensing and control. In 1953, General
-Motors and RCA completed a scale model of an automated highway system,
+Motors and RCA completed a scale model of an automated highway system
 that would allow the two companies to experiment
 with developing steering and distance control systems \cite[p. 6]{wetmore}.
 General Motors's 1950s Firebird concept
@@ -354,6 +351,8 @@ Washington D.C \cite[p. 9]{wetmore}.
 %% by alternating current. Electromagnetism supplemented electricity as the
 %% guidance mechanism of choice.
 
+%% (who gave numerous
+%% public lectures through the 1950s) 
 
 The 1964 New York World's Fair hosted a second Futurama exhibit, in
 which GM presented an automated highway system much like Zworykin's
@@ -366,13 +365,12 @@ move at equal intervals as a group \cite[p. 9]{wetmore}.\footnote{This
 idea may seem quaint, but actually represents an important operations
 paradigm that is the focus of the last two chapters of this thesis.
 Public proposals to this effect are rare, but the concept remains
-vitally important.}\end{quote}
+important.}\end{quote}
  Advances in
 electronics, and the expansion of early control theory into
-cybernetics through the work of Norbert Wiener (who gave numerous
-public lectures through the 1950s) and his contemporaries seemed
+cybernetics through the work of Norbert Wiener and his contemporaries seemed
 poised to make revolutionary applications of electrical control
-possible. In a lecture given in 1960, Wiener
+possible. Concern about human reaction times persisted. In a lecture given in 1960, Wiener
 make the case for automated control systems: ``by the time we are able
 to react to our senses and stop the car which we are driving, it may
 already have run head on into a wall,'' he wrote, and the answer to
@@ -381,13 +379,12 @@ developments in automated driving did not materialize, and research
 languished, out of the public eye, throughout the late 1960s and 1970s
 \cite[p. 10]{wetmore}. Instead of autonomous vehicles---in a trend
 that arguably began
-with \emph{Safety Last} and \emph{Unsafe at Any Speed}
-\cite{oconnellmyers} \cite{nader}---the public pushed
+with \emph{Safety Last} \cite{oconnellmyers} and \emph{Unsafe at Any Speed} \cite{nader}---the public pushed
 for an
 increasing array of safety systems designed to make vehicles more forgiving
 of human errors---starting with rudimentary
-mechanical automation such as seat belts, and continuing through
-airbags, ABS, and other more modern systems.
+mechanical restraints such as seat belts, and continuing through
+airbags, ABS, and other more complex automation systems.
 
 \subsection{Research at the Turn of the Century}
 
@@ -406,7 +403,8 @@ efforts to design and develop intelligent vehicle-highway systems (IVHS) occurre
 in the United States and elsewhere during the 1980s and 1990s \cite[p.
   11-12]{wetmore}. These
 efforts focused primarily on ``nearer term'' technologies, such as
-electronic tolls and driver information systems\footnote{411}, located
+electronic tolls and driver information systems,\footnote{Such as 511
+  systems \cite{costello511}.} located
 outside the vehicle. In contrast to earlier radio or track-based
 electrical control, which similarly involved infrastructural changes, the 
 ``modern'' era of self-driving vehicle research begins with
@@ -417,7 +415,7 @@ process images in near real time and compact enough to be placed on
 the vehicle itself \cite[p. v]{dickmannsDynamic} \cite{vamors-p}. In the 1980s, Ernst
 Dickmanns's lab at the 
 University Bundswerhr, in Munich, Germany was active in some of the
-earliest self-driving car research and development \cite{schmidhuber}. Their early
+earliest self-driving car research and development. Their early
 vehicle, a specially equipped 5-ton Mercedes-Benz van---computerized
 controls could be used to perform all necessary driver inputs---was
 fitted with cameras, other sensors, and an image-processing system to
@@ -489,9 +487,8 @@ and proves similarly unhelpful, as will be described in chapter
 
 Further autonomous vehicle research has progressed from
 these vision-based beginnings. The
-DARPA Grand Challenge in 2004 and 2005 (evolving from the
-  DARPA Strategic Computing project, discussed in chapter
-  \ref{chap:1}), and the DARPA Urban Challenge 
+DARPA Grand Challenge in 2004 and 2005 (evolving from the earlier
+  DARPA Strategic Computing project), and the DARPA Urban Challenge 
 in 2007, spurred significant interest, and brought together industry
 groups and universities to 
 try to extend the capabilities of fully autonomous vehicles.\footnote{The
@@ -542,7 +539,7 @@ in a public test of vehicle autonomy in Sweden \cite{volvoPR}, and is moving for
 with automated systems in its production cars, building from years of
 research in Advanced Driver Assistance Systems (ADAS) and Advanced
 Vehicle Control Systems (AVCS). It is important to recognize that
-there is a spectrum of approaches being developed today, from iterated
+a spectrum of approaches are being developed today, from iterated
 improvements on current designs to radical approaches that attempt to
 achieve full self-driving at once. Automated\footnote{I use ``automated''
   precisely here. It is one of the main failures of the
@@ -553,8 +550,7 @@ achieve full self-driving at once. Automated\footnote{I use ``automated''
   These questions will return again and again through this thesis. }---or even
 ``self-driving''---vehicles are not just one, uniform type of
 device. And, critically, there is no clear
-line to be drawn between their extremes, as we will see in chapter
-\ref{chap:3}. 
+line to be drawn between their extremes.
 
 
 %% >>>Story hook: currently, this calls out to be a brief historical
@@ -578,8 +574,8 @@ line to be drawn between their extremes, as we will see in chapter
 %% or Google's ``moonshot'' approach will triumph
 %% . In fact, the interior is
 %% covered in touchable displays,
-One would be excused, however, for thinking differently. The popular
-portrayal of self-driving technology is often lacking in nuance. While
+One would be excused, however, for thinking differently.
+Portrayals of self-driving technology are often lacking in nuance. While
 there is a fair amount of popular argument about whether these
 vehicles will be beneficial (or how beneficial they will be) along
 various axes of interest, there is relatively little discussion of
@@ -702,6 +698,9 @@ public face for driverless car skepticism \cite{ramseyWhen} \cite{gomesCircles}.
 %% or illustrate its problems, without challenging that fundamental
 %% picture. 
 
+%% And few people seem to dispute what the object is that is
+%% being discussed, or how else it might look.
+
 There is much more to the story than is
 apparent in this simplistic dual-narrative.  A few
 articles about automated vehicles remember the history, from the 1939
@@ -714,8 +713,7 @@ driving---the latter largely stripped of its
 technology focus on the future, and do relatively little to
 investigate the past or present: how we got to 
 where we are now, or even what level of autonomy we currently see in
-our vehicles. And few people seem to dispute what the object is that is
-being discussed, or how else it might look.\footnote{Though it should
+our vehicles.\footnote{Though it should
   be said that John Leonard, for example, has much more nuanced views
   on the subject than get represented in these narratives.} The idea that ``if you are asked to take control, we've
 failed'' has become deeply ingrained in our development
@@ -786,8 +784,12 @@ historical examples.
 %% opinion and policy in
 %% productive ways.
 
-This thesis is organized around investigating dominant narratives of
-self-driving vehicles and their gaps. In chapter \ref{chap:1}, I continue examining
+%%  and where it is headed in the
+%% future, which leads to
+
+This thesis investigates dominant narratives of
+self-driving vehicles and their gaps, and assesses the importance of
+alternative paradigms or narratives of automation. In chapter \ref{chap:1}, I continue examining
 the sources of the idea, common both among the media and among
 self-driving vehicle researchers, that complete vehicle autonomy is
 the only future vision worth discussing and investigating. And I
@@ -799,12 +801,12 @@ others). Taking the popular narrative at face value presents the
 possibility of certain kinds of futures---with important
 disadvantages---while foreclosing on others in ways that must be
 carefully examined. In chapter \ref{chap:3}, I
-examine an alternative paradigm for thinking about automation, and
-make the case for why supervisory control is an acceptable---and in
+describe an alternative paradigm for thinking about automation, and
+make the case for why it is an acceptable---and in
 many ways, more apt---alternative for considering what automation is
-and does. But, as I describe, supervisory control presents a very
-different read on what automation means and where it is headed in the
-future, which leads to the possibility of different futures, with
+and does. As I describe, supervisory control or joint-cognitive
+systems research presents a very
+different read on what automation means, and allows for the possibility of different futures with
 different stakes and trade-offs. Finally, in the conclusion, I briefly examine the
 historical re-shaping of roadways, and argue that adding autonomy to cars does not,
 alone, solve any social problems. Successfully addressing social
