--- a/main.bib
+++ b/main.bib
@@ -2146,8 +2146,16 @@
    year = "1965",
 }
 
-
-
+@INCOLLECTION{lenat1997,
+   author = "Doug Lenat",
+   title = "{F}rom 2001 to 2001: {C}ommon {S}ense and the {M}ind of {HAL}",
+   editor = "David G. Stork",
+   booktitle = "{HAL}'s {L}egacy: 2001's {C}omputer {A}s {D}ream and {R}eality",
+   publisher = "MIT Press",
+   address = "Cambridge, MA",
+   year = "1997",
+   pages = "193--210",
+}
 
 
 
@@ -2255,6 +2263,13 @@
    author = "John Fernandez",
    title = "{B}oulder {R}edesigns {R}esidential {S}treets to {F}ocus on {P}eople {R}ather than {C}ars",
    pages = "65--70",
+}
+
+@INCOLLECTION{costello511,
+   crossref = "kempCars",
+   author = "Pete Costello",
+   title = "{S}an {F}rancisco {R}egion, {O}ther {A}reas, {U}se {C}ommunications {S}ystem to {M}anage {T}raffic",
+   pages = "168--170",
 }
 
 @INCOLLECTION{swopeTrenton,
