--- a/chap2.tex
+++ b/chap2.tex
@@ -35,7 +35,7 @@
 % about when those visions are not deeply rooted in the history?
 
 Technologies, with rare exceptions, are imagined through design
-fiction and/or science fiction before they are made. These future
+fiction or science fiction before they are made. These future
 visions serve a number of purposes:  they inspire scientists and
 engineers,\footnote{In fact I think it would be exceedingly rare to
   find an engineer today who was not influenced by science fiction. My
@@ -48,7 +48,7 @@ engineers,\footnote{In fact I think it would be exceedingly rare to
   influenced by Jules Verne, and some even wrote science fiction
   themselves \cite[p. 2]{marketingMoon}.} they serve as design
 studies for the possible shapes of technology, and they act as
-playgrounds to investigate the cultural impacts of technologies.
+playgrounds to investigate their cultural impacts.
 Though created in different contexts, with potentially 
 different levels of scholarly care, these two types of fiction are not
 neatly delineated, and are unified as sources of insight into what
@@ -61,7 +61,7 @@ futures \cite[p. 8]{bleecker}.
 %% related to the technologies they are responsible for
 %% helping bring to life on screen. 
 
-It would be wrong to categorize science
+But it would be wrong to categorize science
 fiction as categorically less relevant. Science fiction films
 often involve scientific consultants with real
 technical knowledge, whose depictions become what David
@@ -71,11 +71,11 @@ viability'' \cite[p. 43]{kirbyFuture}. Kirby connects prototypes (primary
 ``driver[s] of technological innovation''---in
 Suchman's terms ``performative artefacts'' \cite[p. 45]{kirbyFuture})
 to these diegetic prototypes, 
-by recognizing both their similar rhetorical roles as well as the
+recognizing their similar rhetorical roles and the
 ability of diegetic prototypes to mobilize funding for real-life
 prototypes \cite[p. 44-47]{kirbyFuture}. Science fiction, then, has deep
 and compelling relationships with real engineers and engineering via
-its depiction of aspirational (or cautionary) futures.
+its depiction of aspirational or cautionary futures.
 
 %%COnsider citing the Suchman article itself in Kirby
 
@@ -128,7 +128,7 @@ its depiction of aspirational (or cautionary) futures.
 %% compelling, but also because they are so easily available. 
 
 Science fiction is a perennial source of popular metaphors and ideas
-about technological change, because its
+about technological change because its
 images represent compelling and easily-digestible
 cultural reference 
 points for technological stories in the popular press. From Asimov to
@@ -148,13 +148,13 @@ consultation with Harald Belker, an automotive designer responsible
 for both numerous Hollywood collaborations as well as real-world
 products \cite{melansonMinority}.} Popularly referenced fictions are
 not all so contemporary. \emph{The Jetsons}, though
-the show did not actually foreground driverless vehicles, also gets
-recalled as a source of inspiration due to the role of flying cars,
+the show did not foreground driverless vehicles, also gets
+recalled as a source of inspiration due to its flying cars,
 which trigger similar visions of wild 
 futures made possible through technology \cite{JetsonsAge}. However, many
 worlds that look lovely in science fictions or design fictions represent places 
 we may not actually wish to live, and these portrayals can afford to
-avoid issues of reliability and human interaction that we cannot avoid
+ignore issues of reliability and human interaction that we cannot avoid
 in the real world. 
 
 %% Many, indeed most, articles seem ignorant of the actual research
@@ -186,12 +186,12 @@ yet limited to a lucky few. Google hosts special press events to allow
 select journalists
 to ride in their automated vehicles. Their capabilities are touted,
 advertised, but their media picture is still tightly controlled. Not subsumed
-to the mundane, the quotidian,\footnote{Certain articles from people
-  who have actually gone for a ride in these vehicles stress the
+to the mundane, the quotidian,\footnote{Some articles from people
+  who have ridden in these vehicles stress the
   boredom and mundanity that comes with operating this
   technology \cite{rode500}. But these do not represent the
   preponderance of coverage. It also should be noted that boredom
-  always comes with the potential of its opposite. Operating automated
+  always comes with the potential of its opposite: operating automated
 systems can involve ``hours of boredom
 punctuated by moments of terror'' \cite[p. 339]{sheridan}.} they still
 possess that magic that 
@@ -281,7 +281,7 @@ ways in which our design fictions may fail us, I will
 take as assumed the general form of the autonomous vehicle as present
 in Google's development work. I seek to take this concept
 to its logical conclusion and interrogate the social,
-cultural, and informational stakes implicit in it. 
+cultural, and informational norms implicit in it. 
 
 
 \subsection{Data Gathering and Monitoring} 
@@ -340,7 +340,7 @@ and shared with other entities; but it may be that not all the
 information that is collected should be shared outside the immediate
 context of its use. What is sensed, and what can be appropriately
 transmitted back to servers for processing and storage, is of
-paramount importance: this is a question of privacy in context
+paramount importance
 \cite{nissenbaum}.\footnote{Following Nissenbaum, privacy must always
   be seen in the context of 
 particular users and a particular use \cite[p. 2]{nissenbaum}. It is not that data about our
@@ -372,10 +372,10 @@ With what networks, and for what reasons, will autonomous vehicles be
 connected? Current driverless car concepts depend on networked
 information for vehicle guidance.
 Google's vehicles use inertial navigation devices \cite{knightFurther}
-alongside other sources of position data, current navigation systems
+alongside other sources of position data: their current navigation systems
 depend on global positioning satellites.\footnote{Unlike these,
-guidance systems for intercontinental ballistic
-missiles were often inertial only, isolated from the outside world
+guidance systems for particular applications (e.g. intercontinental ballistic
+missiles) can be inertial only, isolated from the outside world
 \cite{mackenzie}.} But autonomous
 vehicles will be connected to more than just global positioning
 networks. GM's OnStar service already connects equipped vehicles to central servers for
@@ -491,15 +491,14 @@ privacy.
 Setting aside governmental surveillance, networked technologies do not
 have a great security record, 
 and there is no reason to believe automated cars will be any
-different, barring greater scrutiny and
-regulation.\footnote{Commercial networked devices routinely lack basic
+different.\footnote{Commercial networked devices routinely lack basic
 security measures. And for a large number of other systems, security
 is defeated by being out-of-date or by using default passwords that
 were never changed. See for example \cite{zetter}.}
 Networked capabilities within vehicles are being used to
 implement vehicle kill-switches, capable of remotely disabling
 vehicles on the whim of the controlling organization---for example, if
-vehicle rental or loan payments are not completed on time, and the existence of these devices
+vehicle rental or loan payments are not completed on time---and the existence of these devices
 presents opportunities for hackers to cause nuisance or
 harm \cite{goodman}.
 Existing vulnerabilities in web services and dealership practice
@@ -524,8 +523,8 @@ an authorized adult is present. These are only visions,\footnote{Patents
 are notorious for trying to cover as many possible angles of a
 technology even if they are not intended to be applied in practice.} 
 but represent a perspective on safety 
-that posits technological surveillance and enforcement as an
-appropriate measure against potential criminal behavior. Whether or not protecting
+that posits technological surveillance and enforcement as
+appropriate measures against potential criminal behavior. Whether or not protecting
 against these threats is an appropriate use of this information is a
 matter for societal judgment, but such proposals, if enacted, would
 require these vehicles to have unprecedented levels of very sensitive
@@ -579,7 +578,7 @@ depending only on visual stimuli (such as the EUREKA PROMETHEUS project
 in the 1990s) \cite{ulmerVITA}, modern systems are tending to use more external
 stimuli, rather than fewer, in an attempt to increase safety and
 vehicle capability. Google's vehicles do not operate in a SLAM mode: even as
-advanced as it is, their vehicles require
+advanced as they are, their vehicles require
 hyper-detailed 3D maps in order to operate properly on public
 roadways \cite{gomesObstacles}. These maps are generated by human-piloted vehicles outfitted with
 special sensor arrays, like the LIDAR Google uses for their autonomous
@@ -609,13 +608,13 @@ system requires beforehand \cite{harrisNevada}. The system would likely not have
 capable of passing a test in which the examiner could have added
 detours on the fly. And though Google claims to have driven more than
 700,000 miles with their cars, those are not 700,000 unique miles. A
-limited, thoroughly pre-mapped route has been driven many times to
+limited, pre-mapped route has been driven many times to
 achieve those numbers \cite{gomesCircles}.
 
 %%TODO2 Karen Kaplan and MAPS
 Mapping claims a unique capability to
 represent the real, objectively
-and diagrammatically, but also requires that world to remain largely
+and diagrammatically, but also requires that the world remain largely
 static, at least on the order of how long it takes to update the map.
 The necessary level of continual mapping is a massive task if the 
 vehicles must be usable everywhere. The United States alone contains almost
@@ -734,10 +733,10 @@ to detect---these choices depend on applications, and the judgments of
 designers as to what is worth measuring. And while computer vision is having success
 with object detection, a wide variety of human knowledge
 about objects and scenes is missing in current computer
-models, including propositional understandings (``what would happen if
-. . ?''), projections about occlusions (``what is behind that?''), and
-connections to other sensory modes (``what would that feel like if I
-touched it?'') \cite{gomesJordan}.
+models, including propositional understandings (``what would happen
+if...?''), projections about occlusions (``what is behind that?''),
+and 
+connections to other sensory modes (``what does that object feel like?'') \cite{gomesJordan}.
 
 %% In an attempt to build
 %% autonomous vehicles that can operate without infrastructural changes,
@@ -790,18 +789,18 @@ with human oversight compensating for algorithmic deficiencies.
 %% sonar, for example, which becomes problematic in crowded
 %% situations).
 
-Early approaches pioneered Ernst
+Early approaches pioneered
 Dickmanns and others were designed primarily for 
 highway operation under constant human supervision, which made their
 rudimentary strategy of searching for lane markings and vehicles
 acceptable, since pedestrian interactions were likely to be
-rare.\footnote{The documentation of the VITA-II mentions pedestrian
+rare.\footnote{VITA-II papers mention pedestrian
   interaction management as future work necessary for changing the
-  working domain from the highway to urban and country environments \cite{ulmerVITA-II}.}
+  operation domain from the highway to urban and country environments \cite{ulmerVITA-II}.}
 Some contemporary commercial systems, now using digital video cameras
 and off-the-shelf consumer hardware, are primarily guided based on
 such visual sensors \cite{makingBertha}. Roof-mounted
-LIDAR\footnote{LIght Detection And Ranging} arrays can supplement
+LIDAR arrays can supplement
 these systems, scanning the environment with 
 rotating laser beams to create a detailed 360-degree
 representation of objects and their distances. This technology
@@ -810,8 +809,7 @@ it can provide highly-sensitive information about free space and
 obstacles. Shape-detection algorithms can then be used (in addition to
 vision-based data) to classify obstacles as different types of
 objects: pedestrians, bicyclists, cars, and trucks.\footnote{This also
-  works for other kinds of physical objects. See for example the
-  detection work done by \cite{fukuda}.}
+  works for other kinds of physical objects, like signs \cite{fukuda}.}
 
 %% DONE?
 %% --Göde Both and reluctance to use Machine Learning (1 p)
@@ -862,12 +860,11 @@ behavior (e.g. bouncing or rolling). None of this is fundamentally
 impossible, but it presents necessary areas for research.
 
 Detected categories allow the system to make
-statistical predictions about likely types of behavior\footnote{According to
-one of Google's patent applications, bicyclists are likely to be more
-erratic than trucks, and should be treated
-accordingly \cite{predictPatent}.} These sorts of predictions are
-something that human drivers do consistently, and are therefore also
-likely important to how autonomous vehicles may drive.\footnote{The
+statistical predictions about likely types of behavior based on
+assumptions about those categories
+\cite{predictPatent}. These sorts of predictions are 
+something that human drivers do consistently, and are therefore
+likely to be important for autonomous vehicles.\footnote{The
   DARPA Urban Challenge crash, the first crash between two autonomous
   cars, provides an important lesson on the vagaries of object
   detection: the classification threshold between moving and
@@ -875,12 +872,11 @@ likely important to how autonomous vehicles may drive.\footnote{The
   as stationary, leaving no room for unexpected behavior \cite{collisionPaper}.}
 Categories alone, even if achieved, are also insufficient if detected
 objects are treated solely as obstacles to be avoided. John Leonard
-shows a collection of photographs and videos of environmental
-edge-cases---including situations with police  
+shows a collection of photographs and videos of situational
+edge-cases---such as police  
 directing traffic, especially when combined with sun glare or
 occlusions of the sight lines---that
-would make predictions regarding oncoming 
-objects difficult.\footnote{Discussion with the author, December 3,
+would make behavior prediction and response difficult.\footnote{Discussion with the author, December 3,
   2014.} His take-away is that humans will be
 required to account for these sorts of difficult perceptual
 situations. 
@@ -899,13 +895,13 @@ situations.
 However, because autonomous cars see---putatively ``as we see''---their sight can
 be leveraged as visual evidence of their operation. Computer vision
 systems that identify 
-pedestrians can be shown to do so, via the detection boxes that act as
+pedestrians can be shown to do so via detection boxes that act as
 diagnostic tools for researchers and direct representations of
 internal system information.\footnote{See for example Volvo's ad for
   the S60's pedestrian detection capabilities \cite{volvovideo}.} The new technologies of vehicle
 automation thereby produce through 
 their operation new forms of evidence, which can be presented through
-electronic information media. We can point to these images and identify
+electronic media. We can point to these images and identify
 that the vehicle is operating as it should. Three-dimensional shapes,
 standing in stark relief against 
 the background in LIDAR scans, bear witness to the sensory operation
@@ -961,10 +957,9 @@ imaging and which use images rhetorically, to stand for the ``truth''
 of their ability to perform a task---such as detect a pedestrian in a
 crosswalk.} Significant 
 statistical processing is necessary to make sense of data in either
-realm, processing that is generally beyond the public's gaze
-\cite{koerthFish}, but the 
+realm, processing that is generally beyond the public's gaze, but the 
 end result leaves the viewer with a false sense that something real
-has been sensed, revealed, and affirmed by the image.
+has been detected, revealed, and affirmed by the image.
 
 
 %% 2.2) functionalism over understanding
@@ -993,12 +988,14 @@ has been sensed, revealed, and affirmed by the image.
 %% general intelligence is very difficult, and is by no means around the
 %% corner.
 
+%% ---and
+%% any claim that they ``know'' or ``understand'' is a misuse of words
+
 We should likewise not be deceived by an apparent parallelism of human
 and machine knowledge, or an elision of the difference between human
 and machine ``cognition.'' Self-driving cars will not be humanlike in
 understanding, even while they can detect and identify pedestrians as
-objects of interest within a particular epistemological frame---and
-any claim that they ``know'' or ``understand'' is a misuse of words. The
+objects of interest within a particular epistemological frame. The
 robots envisioned by current AI 
 ventures bear little resemblance to those of Asimov or the dreams that grew
 from the Dartmouth Conference.\footnote{Chauffeur and Deep Mind, the
@@ -1053,8 +1050,8 @@ concentration.\footnote{A vast proportion of articles make a claim
   distracted, they don't have blind spots, and there is nothing on
   their `minds' except getting safely from point A to point B'' \cite{merrill}.} We
 would not wish to emulate such 
-characteristics in robotic systems. However, though these are human
-capabilities, presented in this way they exist largely as caricatures
+characteristics in robotic systems. Though these are human
+capabilities, however, when presented in this way they exist largely as caricatures
 of the human. People possess a
 variety of other capabilities which might be helpful to many AI
 applications. As AI researcher Doug Lenat wrote in 1997:
@@ -1065,7 +1062,7 @@ cat versus a child versus a car bumper, about children chasing balls
 into the streets, about young dogs being more likely to dart in front
 of cars than old dogs (which, in turn, are more likely to bolt than
 elm trees are), about death being a very undesirable thing \cite[p.
-  122]{ekbia}.\end{quote} 
+  199]{lenat1997}.\end{quote} 
 
 This is a difficult knowledge and perception problem. But even more,
 it is an issue of selfhood, embodiment, even sentience. While cats,
@@ -1074,7 +1071,7 @@ chasing balls into the streets can be identified as patterns, a
 computer programmed to respond to these stimuli may respond correctly
 without ``knowing'' anything. While a machine can be programmed to avoid
 running into people, can it have any understanding of death? Can it be
-programmed to ``feel guilt''? Does it need to?
+programmed to ``feel guilt''? Does it need?
 
 %CAN I FIND RESEARCH ON reactions to humanoid vs. non-human
 %AI drivers
@@ -1102,7 +1099,7 @@ it cannot truly ``understand'' \cite[p. 31]{Collins}.\footnote{Driving, from
 this perspective, involves only behavior-specific acts, which can be
 satisfactorily emulated using the behavioral coordinates of
 action \cite[p. 33--37]{Collins}.} And yet the field of artificial
-intelligence is bound up in the idea 
+intelligence, as discussed in chapter \ref{chap:1}, is bound up in the idea 
 of ``intelligent'' machines that can be said to ``know.'' It is an
 interesting read on the changing 
 times to notice that Lenat's statement seems to suggest humanoid
@@ -1119,8 +1116,8 @@ vehicles is an empirical question. But it certainly suggests a desire
 to make the systems more 
 invisible.}
 Nonetheless, despite lacking the facilities for actual ethics, these
-devices possess an implicit ethics: the
-behaviors of these devices will instantiate the moral and
+devices possess an implicit ethics: their
+behaviors will instantiate the moral and
 ethical judgments of their human creators, based on
 human-authored heuristics and statistical predictions. They will not
 \emph{act} ethically, but must
@@ -1159,8 +1156,8 @@ responsibility (when accidents happen, who is liable?), ethical codes
 (how, and with what ethical frameworks, can robots be programmed to
 operate ``ethically''?), and social impact
 (how do we weigh potential for robots to eliminate
-jobs?) \cite{robotEthics}. The question of
-driverless car ethics has spurred quite a volume of news articles,
+jobs?) \cite{robotEthics}. Driverless car ethics issues have spurred a
+volume of articles, 
 with varying command of the questions
 involved.\footnote{One article discusses a notable
   researcher who has purportedly ``stressed the need for driverless
@@ -1173,7 +1170,7 @@ incoherent---even machine-learning systems are shaped and programmed,
 though their rules are not explicitly written. This sort of phrasing is unfortunate, as it 
 risks suggesting the robot somehow operates ``outside of its
 program,'' making ad-hoc ethical decisions based on criteria of its
-own invention.} Lin himself has been successful in urging a dialogue
+own invention.} Lin has been successful in urging a dialogue
 within various autonomous vehicle research groups about the ethics of
 their products, as well as getting media recognition of this push for
 self-conscious development \cite{timeEthics}. However, many articles
@@ -1216,7 +1213,7 @@ operate, we must look at how they are programmed, and what goals that
 programming is intended to serve. Only with this focus can we agitate
 against systems that are fully black-boxed---closed-source, protected
 intellectual property potentially defended by anti-circumvention
-laws---and enact an ethics impervious to scrutiny.\footnote{Digital
+laws---and that enact an ethics impervious to scrutiny.\footnote{Digital
   rights management and anti-circumvention laws are abused routinely
   to lock out consumers and even muzzle security researchers. For a
   recent example, see \cite{higgins}.
@@ -1274,10 +1271,11 @@ laws---and enact an ethics impervious to scrutiny.\footnote{Digital
 %% drivers and the potential for machines to do much better, free from
 %% human frailties of distraction and fatigue. T
 
-The primary driving force in the current self-driving car
-narrative is safety. The total number of vehicle-related deaths is 
-roughly 35,000 deaths per year in the US \cite{censusDeaths}, but this alone 
-does not tell the story: at around 1 death per 67 million miles, humans seem relatively
+The primary force in the current self-driving car
+push is safety. The total number of vehicle-related deaths is 
+roughly 35,000 deaths per year in the US, but this alone 
+does not tell the story \cite{censusDeaths}: at around 1 death per 67
+million miles, humans seem relatively 
 competent in an absolute sense---by comparison, the average American might
 drive 1 million miles\footnote{This is a conservative estimate,
   extrapolating from an average yearly mileage of between 13,000 and
@@ -1287,13 +1285,11 @@ accidents as well, humans get involved in about one accident per
 life experience, which aids our personal exceptionalism.} Part of why
 the autonomous vehicle problem is 
 such a difficult one is that individual human beings can drive a long
-time without having an accident. \footnote{This statistic seems warranted given recent NHTSA crash
-  data \cite{NHTSAcrash}. Around 93 percent of crashes with ``critical
-  reasons'' involve driver error as one critical reason for the crash.
-  But 30 percent involve a roadway factor, and 12 percent involve some
+time without having an accident. \footnote{Yet, around 93 percent of crashes with ``critical
+  reasons'' involve driver error as one critical reason for the crash, 30 percent involve a roadway factor, and 12 percent involve some
 vehicle-related reason. There may be many reasons for a crash, and
 estimating when the human is solely or primarily responsible for a
-crash is not trivial.}
+crash is not trivial \cite{NHTSAcrash}.}
 
 %% \footnote{As Jim Womack pointed out to me, there is no good side
 %% to change as a regulator. Regulators are not congratulated when things
@@ -1311,8 +1307,8 @@ drivers?\footnote{Chris Gerdes has admitted, as recently as September
   handle emergency situations is something they are still working to
   match \cite{8truthsandmyths}.}
 Such questions have real impact when it comes to how devices are
-designed and when they become commercially viable---and are at least
-partly ethical questions. The autonomous
+designed and when they become commercially viable, and are in
+part ethical questions. The autonomous
 vehicle enterprise seems to call for using such projected statistics
 to define policy. But
 people are also accustomed to the current automobile death rate, and
@@ -1320,13 +1316,13 @@ any autonomous vehicle crashes are likely to attract deep
 scrutiny as
 to whether a human could have prevented the accident. If,
 instead, human oversight to otherwise fully automated systems were
-required, the additional risks of supervision would also need to be
+required, the additional risks of supervision would need to be
 accounted for---including the potential for risk homeostasis
 \cite{Wilde}, the tendency to
 behave less cautiously in situations that appear to be more safe. And
 any possible framework for 
   quantitatively measuring and regulating improvement (e.g. number of deaths,
-  monetary cost, etc.) hides all manner of assumptions and comes with
+  monetary cost, etc.) hides all manner of assumptions and 
   potentially unforeseen consequences: the best decisions by some
   metrics will be non-optimal in others. 
 
@@ -1365,12 +1361,12 @@ But these perspectives are far too simplistic, and miss the point in a
 significant way. The question of whether an
 automated vehicle's fatality rate exceeds some people's, matches the
 safest drivers, or bests all human drivers stands to determine which
-vehicles are legal \cite[p. 6]{SivakSchoettle}. While projecting vehicle
+vehicles are legal \cite[p. 6]{SivakSchoettle}. Projecting vehicle
 risk functions is tricky enough when comparing against a known human
-standard, it becomes even more difficult when one considers that the
+standard, and becomes even more difficult when one considers that the
 ``conventional vehicle'' risk function is itself going to change with
-future safety technologies, including automated driver assistance
-features. The fully self-driving vehicle must be compared to a moving
+future safety technologies, including ADAS. The fully self-driving
+vehicle must be compared to a moving 
 target. Meanwhile, academic researchers are often unable to gain access to
 these systems to test them against exploits
 \cite{madrigalHack}.\footnote{The
@@ -1409,8 +1405,9 @@ adaptive/nondeterministic systems will impede the deployment of some
 advanced IA [increasingly autonomous] vehicles and systems'' in aviation and that
 ``existing V\&V [verification and
   validation] approaches and methods are insufficient for advanced IA
-systems'' for many of the same reasons \cite[p. 2]{NRCAutonomy}.
-\footnote{Among the high-priority research projects they identify as
+systems'' for many of the same reasons \cite[p.
+  2]{NRCAutonomy}.\footnote{Among the high-priority research projects
+  they identify as 
 most pressing and most difficult, they include both the development of
 methodologies to ``characterize and bound the behavior of
 adaptive/nondeterministic systems'' and the creation of standards for
@@ -1428,15 +1425,15 @@ as modern, highly-computerized aircraft (100 million lines versus 5 to
 10 million for the F-35 Joint Strike Fighter)
 \cite{reutersF35}.
 The NRC panel is not alone in recognizing these 
-issues: the Defense Science Board in their task force report \emph{The
+issues for automated systems: the Defense Science Board in their task force report \emph{The
   Role of Autonomy in DoD Systems} attempts to address the importance
 of the larger environment in which automated systems operate, and
 within which they can produce ``unintended operational
 consequences'' \cite[p. 2]{DSB}. They warn of \emph{brittle}
 platforms, and emphasize the importance of developing ways to predict
 and understand the resilience of systems \cite[p. 7, 11]{DSB}. As cars
-become more automated, these difficult-to-predict risks will increase
-in importance.
+become more automated, these difficult-to-predict risks will gain
+importance on the road.
 
 %%TODO (DONE): Amount of code required comparatively with cars and planes, guy says
 %%fully automated is possible but for ethical considerations:
@@ -1494,12 +1491,12 @@ agency to pilots performing a job they do not understand and could not
 take over in an emergency. Perceived safety---due to accident scale,
 publicity, trust, or other factors---may be very different than statistical
 safety.\footnote{The CAST working group has had to account for these
-  issues in their attempt to accident rate by 80 percent \cite[p.
+  issues in their attempt to reduce airline accident rates by 80 percent \cite[p.
     28]{PARCCAST}.
 If air traffic were to continue to increase
 with industry predictions but to maintain the 1997 rate of 1.5 major
 crashes per 1 million departures, we would see one fatal crash per
-week by 2005, and one per day by 2025.\cite{predictmorecrashes},
+week by 2005, and one per day by 2025 \cite{predictmorecrashes}.
 This frequency of accidents was judged to be intolerable to
 airline customers.} But while research into how to get human beings to trust robotic drivers
 is being done \cite{rossTrust}, the voices pushing for autonomous cars sooner
@@ -1593,9 +1590,9 @@ researcher performing ethnographic work, suggest developers see
 themselves as trying to change society. This self-image is not limited
 to those working on mobility systems \cite{naughtonTech}.} This desire to
 change the way cities operate is admirable: our cities have a
-difficult hundred-year history of changing to cope with the
-automobile, and many of these changes have not been for the better
-when examined through a broad lens. The prevalence of automobiles has
+difficult hundred-year history of coping with the
+automobile, and many of their changes have not been for the better
+when examined holistically. The prevalence of automobiles has
 literally re-shaped city centers \cite[p. 7]{burdenCities}, widened
 streets \cite[p. 10]{burdenCities} \cite[p. 65]{fernandezBoulder},
 reduced the potential for vibrant civic life \cite[p. 60]{miaraBoston}
@@ -1632,40 +1629,39 @@ queried at scale. Speaking at The Road Ahead Conference, hosted by
 controlled vehicle tests to work on just such ideas, to improve
 efficiency with vehicle-to-vehicle communications and predictive traffic
 patterns.\footnote{Lam Wee Shan, speaking at The Road Ahead Conference, hosted by
-  the MIT SENSEable City Lab, Cambridge MA, November 21, 2014.
-  Singapore seems to have a unique position in shaping this research,
-  due to its small size, high population density, existing vehicle
-  restrictions, and willingness to 
+  the MIT SENSEable City Lab, Cambridge MA, November 21, 2014.}
+SMART\footnote{Singapore-MIT Alliance for Research and Technology. Singapore seems to have a unique position in shaping this research,
+  due to its existing vehicle
+  restrictions and willingness to 
   leverage itself as a technology test-bed.}
-SMART\footnote{Singapore-MIT Alliance for Research and Technology}
 research suggests a
-significantly smaller number of cars\footnote{Their modeling suggest that 300,000
+significantly smaller number of cars could supply all the mobility
+needs of Singapore if they were automated and could respond to
+demand.\footnote{Their modeling suggest that 300,000
   vehicles could serve 
 all mobility needs during peak times with waits of less than 15
 minutes, and even 200,000 vehicles could reduce wait times
 to about 3 minutes during off-peak hours \cite{frazzoliSingapore}. This
 compares to 779,890 passenger vehicles actually owned in Singapore,
-according to 2011 numbers.} could supply all the mobility
-needs of Singapore if they were automated and could respond to
-demand. Paolo
+according to 2011 numbers.} Paolo
 Santi of the MIT SENSEable City lab suggests replacing traffic lights
-with a slot-based system,\footnote{Each vehicle would request a slot to pass through the
+with a slot-based system\footnote{Each vehicle would request a slot to pass through the
 intersection, and would be instructed to proceed according to the
-orchestrations of a central control system---a fruition of
-Vladimir Zworykin's work at RCA from the 1950s.} to double the capacity of the
-roadway.\footnote{Speaking at The Road Ahead Conference, hosted by
-  the MIT SENSEable City Lab, Cambridge MA, November 21, 2014.} 
+orchestrations of a central control system (a fruition of
+Vladimir Zworykin's work at RCA from the 1950s). Speaking at The Road Ahead Conference, hosted by
+  the MIT SENSEable City Lab, Cambridge MA, November 21, 2014.} to double the capacity of the
+roadway.
 
 These proposals involve numerous potential pitfalls. While coordinated
-fleets of vehicles could increase the throughput of roads by 2 to 20
-times \cite[p. 229]{adamsBrewerRoadways},\footnote{Adams and Brewer
-  cite numbers of 10 solo drivers per square foot of right-of-way per
-  hour for conventional highways, and between 100 and 200 for their
-  modified approaches that use normal subcompact vehicles and special
-  bubble-like micro-cars, respectively.} significantly greater
+fleets of vehicles could increase road throughput by 2 to 20
+times \cite[p. 229]{adamsBrewerRoadways}, significantly greater
 increases would be necessary to match the 
 throughputs of buses or subway trains, which can be 100 times
-greater \cite[p. 222]{loweCars}.\footnote{Specifically, Lowe describes that
+greater \cite[p. 222]{loweCars}.\footnote{Adams and Brewer
+  estimate 10 solo drivers per square foot of right-of-way per
+  hour for conventional highways, and between 100 and 200 for their
+  modified approaches that use normal subcompact vehicles and special
+  bubble-like micro-cars, respectively. Lowe describes that
   per-hour capacity for 
   a rail line can be as high as 70,000 people, compared with 30,000 for buses
 and just 8,000 for private cars.} Much depends on actual usage.
@@ -1762,7 +1758,7 @@ race, class, or situation. Looking more closely, one informant
 described to me, the visions
 of driverless car developers
 often have a male bias: businessmen
-taking driverless cabs to work, and students getting drunk and using
+taking driverless cabs to work, and drunk students using
 automated vehicles to ferry themselves 
 back to their apartments. These visions may be greatly influenced by
 the developers themselves---primarily male engineers with masculinist
@@ -1803,7 +1799,7 @@ improve, rather than erode, equitable access to transportation.
 When the
 expected user is the commuting, upper-middle-class, working father or
 the privileged college boy (and the opposers of the technology are
-branded as ``soccer moms''), we risk developing
+branded as ``soccer moms,'' as one researcher said), we risk developing
 vehicles that preferentially serve certain dominant uses and not
 others. When I asked one informant whether the developers have an idea
 of what driverless cars would mean for people who have children, he
@@ -1830,8 +1826,8 @@ vehicle:  the technologies of vision and of mapping involved
 in its operation, the 
 data it collects, the statistics with which it is motivated, the
 ethics and epistemologies with which it is designed, and the civic
-ends to which it might be mobilized. What is implicit in design
-fictions of the automotive future? We
+ends to which it might be mobilized. These contexts show what is implicit in design
+fictions of the automotive future. We
 have seen that the automated vehicle so envisioned exists at the
 nexus of a number of deep, important questions about our relationships
 to technology: What level of privacy is appropriate? What counts as machine
